--- a/src/components/string/string.module.css
+++ b/src/components/string/string.module.css
@@ -7,3 +7,12 @@
   min-width: 250px;
   margin: 0 auto;
 }
+
+.outString {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  column-gap: 16px;
+  padding-top: 120px;
+  list-style-type: none;
+}
