--- a/src/components/fibonacci-page/fibonacci-page.module.css
+++ b/src/components/fibonacci-page/fibonacci-page.module.css
@@ -10,10 +10,10 @@
 
 .outString {
   display: flex;
-  flex-direction: grid;
+  flex-wrap: wrap;
   justify-content: center;
+  padding-top: 16px;
   column-gap: 16px;
-  row-gap: 16px;
-  padding-top: 80px;
+  row-gap: 48px;   
   list-style-type: none;
 }
