--- a/src/components/sorting-page/sorting-page.module.css
+++ b/src/components/sorting-page/sorting-page.module.css
@@ -1,18 +1,29 @@
 .content {
   display: flex;
   flex-direction: row;
-  justify-content: center;
-  column-gap: 10px;
-  max-width: 500px;
-  min-width: 250px;
+  justify-content: space-between;
+  align-items: center;
+  width: 924px;
   margin: 0 auto;
 }
 
-.outString {
+.radio {
+ display: flex;
+ width: 221px;
+ column-gap: 40px; 
+}
+
+.buttons {
+  display: flex;
+  column-gap: 12px; 
+}
+
+.diagram {
   display: flex;
   flex-direction: row;
   justify-content: center;
-  column-gap: 16px;
-  padding-top: 120px;
+  column-gap: 10px;
+  padding-top: 40px;
   list-style-type: none;
+  max-width: 900px;
 }
