--- a/src/components/sorting-page/sorting-page.module.css
+++ b/src/components/sorting-page/sorting-page.module.css
@@ -22,8 +22,8 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
+  align-items: flex-end;
   column-gap: 10px;
   padding-top: 40px;
   list-style-type: none;
-  max-width: 900px;
 }
