реализовано добавление/удалние в начало/конец

--- a/src/components/list-page/linked-list-page.module.css
+++ b/src/components/list-page/linked-list-page.module.css
@@ -35,3 +35,15 @@
   align-items: center;
   gap: 16px;
 }
+
+.top {
+  position: absolute;
+  top: -70px;
+  left: 13px;
+}
+
+.bottom {
+  position: absolute;
+  top: 120px;
+  left: 13px;
+}
